[package]
name = "urocyon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "error-context"] }
refinery = "0.9.0"
serde_json = "1.0.149"
valuable = "0.1.1"
structured-logger = "1.0.5"
tracing-appender = "0.2.4"
tower-http = { version = "0.6.8", features = ["request-id", "trace"] }
uuid = { version = "1.21.0", features = ["v4"] }
