[package]
name = "urocyon"
version = "0.1.0"
edition = "2024"
description = "Personal single-instance API boilerplate library."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tetraketra/urocyon-rs"
keywords = ["rust", "api", "rest", "personal"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "error-context"] }
serde_json = "1.0.149"
valuable = "0.1.1"
structured-logger = "1.0.5"
tracing-appender = "0.2.4"
tower-http = { version = "0.6.8", features = ["request-id", "trace"] }
uuid = { version = "1.21.0", features = ["v4"] }
tower = "0.5.3"
futures-util = "0.3.32"
